--- a/ResizableRectangle/index.html
+++ b/ResizableRectangle/index.html
@@ -7,6 +7,7 @@
     <script src="js/main.js"></script>
 </head>
 <body>
+    <div id="status">Status here</div>
     <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100%" id="svgCanvas">
 
         <!-- This is what is built using the javascript code  
